Added EnitityFrameworkCore support dropped IEmployeeReposistory dropped MockDataClass

--- a/EmployeeManagement/appsettings.Development.json
+++ b/EmployeeManagement/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "MyKey": "My Key in appsettings.Development.json"
+  "MyKey": "My Key in appsettings.json",
+  "MySpace": " "
 }
