--- a/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "MyKey": "My Key in appsettings.json",
-  "MySpace" : " "
+  "ConnectionStrings": {
+    "EmployeeManagementContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EmployeeManagement;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
