--- a/EmployeeManagement/EmployeeManagement.csproj
+++ b/EmployeeManagement/EmployeeManagement.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Account\_Layout.cshtml" />
+    <Content Remove="Views\Administration\_Layout.cshtml" />
+    <Content Remove="Views\Home\_Layout.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
@@ -22,10 +28,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Views\Account\_Layout.cshtml" />
+    <None Include="Views\Administration\_Layout.cshtml" />
     <None Include="Views\Home\Create.cshtml" />
     <None Include="Views\Home\Details.cshtml" />
     <None Include="Views\Home\Edit.cshtml" />
     <None Include="Views\Home\Index.cshtml" />
+    <None Include="Views\Home\_Layout.cshtml" />
     <None Include="Views\Shared\Error.cshtml" />
     <None Include="Views\Shared\NotFound.cshtml" />
     <None Include="Views\Shared\_Layout.cshtml" />
